--- a/estilos.css
+++ b/estilos.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Fruktur&family=Josefin+Sans:ital,wght@1,300;1,400;1,700&display=swap');
+
 *{
     padding: 0;
     margin: 0;
@@ -9,68 +11,75 @@
 body{
     width:100%;
     height: 100%;
-    background:rgba(0, 247, 255, 0.164);
+    /*background:rgba(0, 247, 255, 0.164);*/
+    background:  rgb(44, 44, 44);
 }
 
 nav{
     position: fixed;
+    display:flex;
+    justify-content:center;
+    width: 100%;
+    height: 75px;
     background:rgb(44, 44, 44);;
-    padding-left: 100px;
-    padding-right: 100px;
-    box-shadow: 4px 5px 6px gray;
+    box-shadow: 4px 5px 6px black;
 }
 
 #contenedor{
-    /*background:blue;*/
-    background:rgb(44, 44, 44);;
+    background:rgb(44, 44, 44);
     display: flex;
     justify-content: space-between;
-    /*background:rgb(44, 44, 44);*/
+    /*background:blue;*/
     color: white;
-    min-width: 1300px;
+    width:80%;
 }
 
 .Titulo{
-    display:flex;
+    text-shadow: 1px 2px 3px gray;
+    color: rgb(183, 110, 255);
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 52px;
+    display: flex;
+    justify-content: center;
     align-items: center;
-    text-align: center;
-    font-family: 'Courier New', Courier, monospace;
-    width:20%;
-    height:70px;
-    text-align: center;
-    /*background:rgb(44, 44, 44);;*/
-    background:red;
-    font-size: 22px;
+    width: 20%;
 }
 
-.Titulo h1{
-    width: 100%;
-}
 
 #menu{
-    align-items: center;
-    /*background:yellow;*/
-    background:rgb(44, 44, 44);;
+    /*background:yellow;;*/
+    display:flex;
+    background: rgb(44, 44, 44);;
     box-sizing: border-box;
-    width: 40%;
+    width:40%;
 }
 
 .item{
-    width: 100%;
-    list-style: none;
+    width: 25%;
+    display: flex;
 }
+
+
+
 
 .link{
+    color: white;
+    font-family: 'Fruktur', cursive;
+    font-family: 'Josefin Sans', sans-serif;
+    font-size: 25px;
+    padding-left: 10px;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    height: 100%;
     width: 100%;
 }
 
-.link:hover{
-    background:rebeccapurple;
-    color: rgb(29, 120, 238);
-    transition-property: color, background;
+.item:hover{
+    background:rgb(183, 110, 255);
+    transition-property: background;
     transition-duration: 0.5s;
 }
-
 
 #primer-titulo{
     margin-top: 30px;
@@ -81,7 +90,7 @@ nav{
 }
 
 .modal{
-    background-color: white;
+    background-color: rgb(44, 44, 44);;
     position: fixed;
     width: 350px;
     padding: 30px;
@@ -114,14 +123,18 @@ nav{
 }
 
 .entrada{
+    color:gray;
+    background: rgb(44, 44, 44);
     width: 100%;
     margin-bottom: 16px;
     padding: 10px;
-    border: solid 2px rgb(29, 120, 238);
+    /*border: solid 2px rgb(29, 120, 238);*/
+    border: solid 2px rgb(183, 110, 255);
     border-radius: 4px;
 }
 
 .modal h4{
+    color:gray;
     font-size: 22px;
 }
 
@@ -137,12 +150,14 @@ nav{
 
 #submit:hover{
     /*background:rgba(29, 120, 238, 0.356);*/
-    background:rgba(29, 120, 238, 0.301);
+    /*background:rgba(29, 120, 238, 0.301);*/
+    background: rgb(204, 161, 247);
 }
 
 #cerrar:hover{
     /*background:rgba(255, 0, 0, 0.521);;*/
-    background:rgba(255, 0, 0, 0.212);
+    /*background:rgba(255, 0, 0, 0.212);*/
+    background: gray;
 }
 
 #contenedor_principal{
@@ -151,7 +166,7 @@ nav{
     margin-left: 10%;
     margin-right: 10%;
     padding: 50px;
-    box-shadow: 4px 5px 20px black;
+    box-shadow: 4px 5px 20px rgb(0, 0, 0);
     border-radius: 4px;
 }
 
@@ -186,7 +201,8 @@ p{
 }
 
 #boton-modal:hover{
-    background:rgba(29, 120, 238, 0.301);
+    /*background:rgba(29, 120, 238, 0.301);*/
+    background: rgb(204, 161, 247);
 }
 
 .pop{
