--- a/estilos.css
+++ b/estilos.css
@@ -8,11 +8,33 @@
 }
 
 
+header{
+    /* --fondo:rgb(44, 44, 44); */
+    --fondo:rgb(255, 255, 255);
+    --borde: 1px solid rgba(172, 172, 172, 0.637);
+    --color: rgb(148, 143, 143);
+    width: 99%;
+}
+
+
+#cabecera-frame{
+   /*  box-shadow: 1px 2px 3px gray; */
+    border-radius: 4px;
+    position: fixed;
+    width: 100%;
+    border: none;
+    height: 75px;
+}
+
+.frame{
+    width:100%;
+}
+
 body{
     width:100%;
     height: 100%;
     /*background:rgba(0, 247, 255, 0.164);*/
-    background:  rgba(143, 226, 252, 0.555);
+    background: white;
     /*background-image: url("assets/fondo.jpg");*/
 }
 
@@ -22,16 +44,17 @@ nav{
     justify-content:center;
     width: 100%;
     height: 75px;
-    background:rgb(44, 44, 44);;
-    box-shadow: 4px 5px 6px black;
+    background: var(--fondo);
+    border-bottom: var(--borde);
 }
 
 #contenedor{
-    background:rgb(44, 44, 44);
+    /* background:rgb(44, 44, 44); */
+    background: var(--fondo);
     display: flex;
     justify-content: space-between;
     /*background:blue;*/
-    color: white;
+    color:var(--color);
     width:80%;
 }
 
@@ -50,7 +73,7 @@ nav{
 #menu{
     /*background:yellow;;*/
     display:flex;
-    background: rgb(44, 44, 44);;
+    background: var(--fondo);
     box-sizing: border-box;
     width:40%;
 }
@@ -64,8 +87,7 @@ nav{
 
 
 .link{
-    color: white;
-    font-family: 'Fruktur', cursive;
+    color:var(--color);
     font-family: 'Josefin Sans', sans-serif;
     font-size: 25px;
     padding-left: 10px;
@@ -77,13 +99,62 @@ nav{
 }
 
 .item:hover{
+    color: black;
     background:rgb(183, 110, 255);
     transition-property: background;
     transition-duration: 0.5s;
 }
 
+.link:hover{
+    color: black;
+}
+
+
+#menu-lateral{
+    height:100%;
+    width: 100%;
+}
+
+#menu-lateral-frame{
+    border: 1px solid rgba(172, 172, 172, 0.637);
+    border-radius: 4px;
+    position: fixed;
+    top:90px;
+    left: 10px;
+    width: 20%;
+    height: 30%;
+    padding: 10px;
+}
+
+#menu-lateral h3{
+    font-family: 'Josefin Sans', sans-serif;
+    width: 100%;
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+.items-lateral{
+    width:100%;
+    border: 1px solid rgba(172, 172, 172, 0.637);
+    font-family: 'Josefin Sans', sans-serif;
+    padding: 10px;
+}
+
 #primer-titulo{
-    margin-top: 30px;
+    margin-top: 40px;
+}
+
+#inicio_sesion{
+    display: flex;
+    height: 100%;
+    align-items: center;
+    margin-left: 40px;
+}
+
+#inicio_sesion:hover{
+    background:rgb(183, 110, 255);
+    transition-property: background;
+    transition-duration: 0.5s;
 }
 
 #menu{
@@ -91,7 +162,7 @@ nav{
 }
 
 .modal{
-    background-color: rgb(44, 44, 44);
+    background-color: white;
     position: fixed;
     width: 350px;
     padding: 30px;
@@ -125,7 +196,7 @@ nav{
 
 .entrada{
     color:gray;
-    background: rgb(44, 44, 44);
+    background: var(--fondo);
     width: 100%;
     margin-bottom: 16px;
     padding: 10px;
@@ -170,7 +241,6 @@ nav{
     margin: 0 auto;
     width: 60%;
     padding: 50px;
-    box-shadow: 4px 5px 20px rgb(0, 0, 0);
     border-radius: 4px;
 }
 
